--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -6,6 +6,14 @@
     {{ end }}
 {{ end }}
 
+{{ with index .Site.Data "dm" }}
+    {{ range $vendor := .assets }}
+        {{ if $vendor.js }}
+            <script src="{{ print "dist/" $vendor.js | relURL }}"></script>
+        {{ end }}
+    {{ end }}
+{{ end }}
+
 {{ if .Site.Params.prismJS.enable }}
 <script>
     window.Prism = window.Prism || {};
@@ -18,4 +26,3 @@
 {{ range .Site.Params.customJS -}}
     <script src="{{ "js/" | relURL }}{{ . }}"></script>
 {{ end }}
-
