--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,6 +39,14 @@
     {{ end }}
 {{ end }}
 
+{{ with index .Site.Data "dm" }}
+    {{ range $vendor := .assets }}
+        {{ if $vendor.css }}
+            <link rel="stylesheet" href="{{ print "dist/" $vendor.css | relURL }}">
+        {{ end }}
+    {{ end }}
+{{ end }}
+
 {{ range .Site.Params.customCSS -}}
     <link rel="stylesheet" href="{{ "css/" | relURL }}{{ . }}">
 {{ end }}
